# danish_housing_labour_dbt

./: .gitignore  README.md  requirements.txt
data_exploration/: fetch_dst_tables.py
dbt_project/: dbt_project.yml  profiles.yml  profiles.yml.example
dbt_project/analyses/: price_trend_exploration.sql
dbt_project/docs/: overview.md
dbt_project/macros/: convert_dst_period.sql
dbt_project/models/core/: _core_schema.yml  dim_municipalities.sql  fct_housing_prices.sql  fct_housing_transactions.sql  fct_labour_market.sql  fct_labour_market_regional.sql
dbt_project/models/marts/: _marts_schema.yml  mart_housing_affordability.sql  mart_labour_housing_correlation.sql
dbt_project/models/staging/: _src_schema.yml  src_earnings.sql  src_housing_national.sql  src_housing_prices.sql  src_local_income.sql  src_price_index.sql  src_price_regional.sql  src_unemployment.sql
dbt_project/seeds/: _seeds_schema.yml  municipality_regions.csv
dbt_project/snapshots/: scd_municipalities.sql
dbt_project/tests/: assert_price_positive.sql
ingestion/: .env.example  requirements.txt  run_ingestion.py  verify_connection.py
ingestion/src/: fetch.py  load.py  tables.py
orchestration/: dagster_cloud.yaml  pyproject.toml  workspace.yaml
orchestration/danish_housing_labour/: __init__.py  assets.py  schedules.py
orchestration/history/: runs.db
orchestration/history/runs/: index.db
orchestration/schedules/: schedules.db
